# myhasher

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  README  README.md  WORKSPACE
.github/workflows/: rust.yml
src/: main.rs  myhasher.rs
