load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_clippy")

rust_binary(
    name = "myhasher",
    srcs = [
        "src/main.rs",
        "src/myhasher.rs",
    ],
    edition = "2021",
    deps = [
        "@third_party//:hex",
        "@third_party//:sha2",
        "@third_party//:clap",
    ],
    proc_macro_deps = [
        "@rules_rust//util/import"
    ]
)

rust_clippy(
    name = "myhasher_clippy",
    testonly = True,
    deps = [
        ":myhasher",
    ],
)
